# agent-work-proof

./: .gitignore  README.md  __init__.py  adapters.py  agent_wallet.py  awp_hook.py  delivery_proof.py  local_registry.py  openclaw_example.py  pyproject.toml  reputation_graph.py  test_agentwork.py  work_credential.py
.github/workflows/: python-app.yml
agent_work_proof/: __init__.py  adapters.py  adapters_crewai.py  cli.py  delivery_proof.py  local_registry.py  reputation_graph.py  work_credential.py
examples/: openclaw_example.py
tests/: test_agent_work_proof.py
