[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-work-proof"
version = "0.1.0"
description = "Portable proof that an AI agent got the job done."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "agent-work-proof contributors" }]
requires-python = ">=3.10"
keywords = ["ai", "agents", "identity", "credentials", "reputation", "verifiable-credentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
langchain = ["langchain>=0.2.0"]

[project.urls]
Homepage = "https://github.com/shaikh-amer/agent-work-proof"
Repository = "https://github.com/shaikh-amer/agent-work-proof"
Issues = "https://github.com/shaikh-amer/agent-work-proof/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_work_proof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
